# ai-chatbot

./: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
api/: index.py
api/utils/: tools.py
app/(chat)/api/chat/: route.ts
lib/ai/: providers.ts
