[project]
name = "ai-chatbot"
version = "0.1.0"
description = "AI chatbot using the Chat SDK and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "conatus",
  "fastapi>=0.115.12",
  "openai>=1.86.0",
  "pydantic>=2.11.5",
  "python-dotenv>=1.1.0",
  "uvicorn>=0.34.3",
]

[tool.uv.sources]
conatus = { git = "ssh://git@github.com/lemeb/ctus-history", branch = "main" }
